alignment fixes

--- a/src/app/styles/components/prices.less
+++ b/src/app/styles/components/prices.less
@@ -142,3 +142,7 @@
 a{
 	cursor: pointer;
 }
+
+svg:not(:root){
+	overflow: visible;
+}
