--- a/src/app/styles/misc.less
+++ b/src/app/styles/misc.less
@@ -32,3 +32,6 @@ body{
 .text-lighter {
 	opacity: 0.45;
 }
+.material-icons{
+	font-size: 16px;
+}
